[gd_scene load_steps=7 format=3 uid="uid://dbqil7tnokvyd"]

[ext_resource type="Script" uid="uid://bd85ig5irvsup" path="res://scripts/store_layer_downloads.gd" id="1_2ym8l"]
[ext_resource type="Texture2D" uid="uid://c6cgry7lwapkj" path="res://assets/images/volver.png" id="2_1ffot"]
[ext_resource type="PackedScene" uid="uid://c6l0suefj1tur" path="res://scenes/components/store_model_button_templ.tscn" id="3_1ffot"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qmmev"]
bg_color = Color(0.172549, 0.0941176, 0.164706, 0.956863)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gseyr"]
bg_color = Color(1, 1, 1, 1)
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_detail = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3sq6u"]
bg_color = Color(1, 1, 1, 1)
border_width_top = 5
corner_detail = 5

[node name="StoreLayer_Downloads" type="CanvasLayer"]
script = ExtResource("1_2ym8l")

[node name="PanelPrincipal3" type="PanelContainer" parent="."]
anchors_preset = -1
anchor_right = 0.556
anchor_bottom = 1.0
offset_right = 479.52
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_qmmev")

[node name="SideVista2MODELOS" type="MarginContainer" parent="PanelPrincipal3"]
layout_mode = 2
theme_override_constants/margin_left = 70
theme_override_constants/margin_top = 70
theme_override_constants/margin_right = 70
theme_override_constants/margin_bottom = 70

[node name="VBoxContainer" type="VBoxContainer" parent="PanelPrincipal3/SideVista2MODELOS"]
layout_mode = 2

[node name="CategoryLabel" type="Label" parent="PanelPrincipal3/SideVista2MODELOS/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.960784, 0.878431, 0.788235, 1)
theme_override_font_sizes/font_size = 80
text = "Mesas peque√±as"

[node name="HSeparator" type="HSeparator" parent="PanelPrincipal3/SideVista2MODELOS/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxFlat_gseyr")

[node name="MarginContainer" type="MarginContainer" parent="PanelPrincipal3/SideVista2MODELOS/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 70
theme_override_constants/margin_top = 70
theme_override_constants/margin_right = 70
theme_override_constants/margin_bottom = 230

[node name="ScrollContainer" type="ScrollContainer" parent="PanelPrincipal3/SideVista2MODELOS/VBoxContainer/MarginContainer"]
clip_contents = false
layout_mode = 2

[node name="ModelsContainer" type="VBoxContainer" parent="PanelPrincipal3/SideVista2MODELOS/VBoxContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Note" type="Label" parent="PanelPrincipal3/SideVista2MODELOS/VBoxContainer/MarginContainer/ScrollContainer/ModelsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "En este momento no hay archivos
disponibles"
horizontal_alignment = 1
clip_text = true

[node name="HSeparator8" type="HSeparator" parent="PanelPrincipal3/SideVista2MODELOS/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.1
theme_override_constants/separation = -5
theme_override_styles/separator = SubResource("StyleBoxFlat_3sq6u")

[node name="BackButton2" type="Button" parent="PanelPrincipal3/SideVista2MODELOS/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 124)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = " Volver "
icon = ExtResource("2_1ffot")
alignment = 2
expand_icon = true

[node name="StoreModelButtonTempl" parent="." instance=ExtResource("3_1ffot")]
unique_name_in_owner = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="PanelPrincipal3/SideVista2MODELOS/VBoxContainer/BackButton2" to="." method="_on_back_button_pressed"]
